[gd_scene format=3 uid="uid://dwkrxrjypyb6w"]

[ext_resource type="Script" uid="uid://dskyrahhirm0b" path="res://Mazes/maze_2/riddle_screen.gd" id="1_e3av5"]

[sub_resource type="LabelSettings" id="LabelSettings_5amr1"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_e3av5"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_kdbqf"]
font_size = 52

[node name="riddle_screen" type="ColorRect" unique_id=1533599760]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.627451)
script = ExtResource("1_e3av5")

[node name="Label" type="Label" parent="." unique_id=777143112]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -554.5
offset_top = -297.0
offset_right = 554.5
offset_bottom = -242.0
grow_horizontal = 2
grow_vertical = 2
text = "Answer this riddle to remove one of the locks on the door"
label_settings = SubResource("LabelSettings_5amr1")
horizontal_alignment = 1

[node name="Riddle" type="Label" parent="." unique_id=2142319808]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -419.0
offset_top = -102.0
offset_right = 419.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2
text = "What came first? The phoenix or the flame?"
label_settings = SubResource("LabelSettings_e3av5")
horizontal_alignment = 1

[node name="A" type="Button" parent="." unique_id=1894203787]
layout_mode = 0
offset_left = 123.0
offset_top = 375.0
offset_right = 529.0
offset_bottom = 432.0
theme_override_font_sizes/font_size = 35
text = "The Phoenix"

[node name="B" type="Button" parent="." unique_id=2026869391]
layout_mode = 0
offset_left = 126.0
offset_top = 492.0
offset_right = 530.0
offset_bottom = 549.0
theme_override_font_sizes/font_size = 35
text = "The Flame"

[node name="C" type="Button" parent="." unique_id=941365647]
layout_mode = 0
offset_left = 598.0
offset_top = 375.0
offset_right = 1026.0
offset_bottom = 432.0
theme_override_font_sizes/font_size = 35
text = "A circle has no beginning"

[node name="D" type="Button" parent="." unique_id=845228510]
layout_mode = 0
offset_left = 598.0
offset_top = 493.0
offset_right = 1026.0
offset_bottom = 550.0
theme_override_font_sizes/font_size = 35
text = "Time"

[node name="chances" type="Label" parent="." unique_id=1453391395]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -84.0
offset_right = 220.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
text = "3 chances remain"
label_settings = SubResource("LabelSettings_kdbqf")

[connection signal="pressed" from="A" to="." method="_on_a_pressed"]
[connection signal="pressed" from="B" to="." method="_on_b_pressed"]
[connection signal="pressed" from="C" to="." method="_on_c_pressed"]
[connection signal="pressed" from="D" to="." method="_on_d_pressed"]
